<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Catalogue Movie Basis Data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="dicoding_userurl">
        Visit user at: <xliff:g id="dicoding_userpage">https://dicoding.com/users/19273</xliff:g>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter words…</string>
    <string name="dialog_exit">Are you sure to exit this application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preferences">Preferences</string>
    <string name="search_movie">Search Movie</string>
    <string name="favourite_movie">Favourite Movie</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="backdrop_movie">Backdrop Movie</string>
    <string name="dialog_message_add">Do you want to add this movie to your favorites?</string>
    <string name="dialog_title_add">Add to Favourites</string>
    <string name="dialog_message_remove">Do you want to remove this movie from favorites?</string>
    <string name="dialog_title_remove">Remove from favorites</string>
    <string name="toast_add">Added to favorites</string>
    <string name="toast_remove">Removed from favorites</string>
    <string name="no_favourite">No favorite movies</string>
</resources>
